gallery slider touch friendly xD

--- a/src/app/core/pages/gallery/gallery.component.html
+++ b/src/app/core/pages/gallery/gallery.component.html
@@ -1,33 +1,4 @@
-<!-- <section class="gallery">
-    <div class="container">
-        <div class="slider">
-            <div id="prev-slide" class="slider-control d-none d-lg-flex">
-                <fa-icon [icon]="['fas', 'arrow-left']"></fa-icon>
-            </div>
-            <div id="next-slide" class="slider-control d-none d-lg-flex">
-                <fa-icon [icon]="['fas', 'arrow-right']"></fa-icon>
-            </div>
-            <div class="images">
-                <img src="../../../../assets/images/carousel/1.jpg" alt="">
-                <img src="../../../../assets/images/carousel/2.jpg" alt="">
-                <img src="../../../../assets/images/carousel/3.jpg" alt="">
-                <img src="../../../../assets/images/carousel/4.jpg" alt="">
-                <img src="../../../../assets/images/carousel/5.jpg" alt="">
-                <img src="../../../../assets/images/carousel/6.jpg" alt="">
-                <img src="../../../../assets/images/carousel/7.jpg" alt="">
-            </div>
-        </div>
-        <div class="slider-scroll">
-            <div class="track">
-                <div class="thumb">
-
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
-
-<section class="galleryv2">
+<section class="gallery">
     <div class="container position-relative">
         <div id="prev-slide" class="slider-control">
             <fa-icon [icon]="['fas', 'arrow-left']"></fa-icon>
