--- a/src/app/core/pages/gallery/gallery.component.scss
+++ b/src/app/core/pages/gallery/gallery.component.scss
@@ -1,93 +1,6 @@
 @import '../../../../assets/styles/global';
 
-// .gallery {
-//     background-color: $colourB;
-//     padding: 2rem 0;
-
-//     .slider {
-//         scrollbar-width: none;
-//         position: relative;
-
-//         ::-webkit-scrollbar {
-//             display: none;
-//         }
-
-//         .images {
-//             display: flex;
-//             flex-direction: row;
-//             gap: 2rem;
-//             overflow-x: auto;
-
-//             img {
-//                 height: 40vh;
-//                 border-radius: 25px;
-//             }
-
-//             @media (max-width: 768px) {
-//                 img {
-//                     height: auto;
-//                     width: 100%;
-//                 }
-//             }
-//         }
-
-//         .slider-control {
-//             position: absolute;
-//             top: 50%;
-//             transform: translateY(-50%);
-//             height: 40px;
-//             width: 40px;
-//             background-color: $colourA;
-//             display: flex;
-//             align-items: center;
-//             justify-content: center;
-//             opacity: 0.5;
-//             border-radius: 50%;
-//             transition: opacity 200ms;
-//             cursor: pointer;
-//         }
-
-//         .slider-control:hover {
-//             opacity: 1;
-//         }
-
-//         #prev-slide {
-//             left: -20px;
-//         }
-
-//         #next-slide {
-//             right: -20px;
-//         }
-//     }
-
-//     .slider-scroll {
-//         padding-top: 1rem;
-//         height: 10px;
-//         width: 100%;
-//         display: flex;
-//         align-items: center;
-
-
-//         .track {
-//             position: relative;
-//             height: 7px;
-//             width: 100%;
-//             background-color: $colourA;
-//             border-radius: 10px;
-
-//             .thumb {
-//                 position: absolute;
-//                 height: 100%;
-//                 width: 30%;
-//                 background-color: $fontColor;
-//                 border-radius: inherit;
-//                 cursor: grab;
-//             }
-//         }
-//     }
-// }
-
-.galleryv2 {
+.gallery {
     background-color: $colourB;
     padding: 2rem 0;
 
