Added routing and translation to the Welcome component

--- a/src/app/core/pages/gallery/gallery.component.html
+++ b/src/app/core/pages/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <section class="gallery">
-    <div class="container position-relative">
+    <div class="container">
         <div class="row pb-3">
             <div class="row h-100">
                 <div class="d-flex align-items-center">
@@ -9,20 +9,22 @@
                 </div>
             </div>
         </div>
-        <div id="prev-slide" class="slider-control">
-            <fa-icon [icon]="['fas', 'arrow-left']"></fa-icon>
-        </div>
-        <div id="next-slide" class="slider-control">
-            <fa-icon [icon]="['fas', 'arrow-right']"></fa-icon>
-        </div>
-        <div class="slider">
-            <img src="../../../../assets/images/carousel/1.jpg" alt="">
-            <img src="../../../../assets/images/carousel/2.jpg" alt="">
-            <img src="../../../../assets/images/carousel/3.jpg" alt="">
-            <img src="../../../../assets/images/carousel/4.jpg" alt="">
-            <img src="../../../../assets/images/carousel/5.jpg" alt="">
-            <img src="../../../../assets/images/carousel/6.jpg" alt="">
-            <img src="../../../../assets/images/carousel/7.jpg" alt="">
+        <div class="position-relative">
+            <div id="prev-slide" class="slider-control">
+                <fa-icon [icon]="['fas', 'arrow-left']"></fa-icon>
+            </div>
+            <div id="next-slide" class="slider-control">
+                <fa-icon [icon]="['fas', 'arrow-right']"></fa-icon>
+            </div>
+            <div class="slider">
+                <img src="../../../../assets/images/carousel/1.jpg" alt="">
+                <img src="../../../../assets/images/carousel/2.jpg" alt="">
+                <img src="../../../../assets/images/carousel/3.jpg" alt="">
+                <img src="../../../../assets/images/carousel/4.jpg" alt="">
+                <img src="../../../../assets/images/carousel/5.jpg" alt="">
+                <img src="../../../../assets/images/carousel/6.jpg" alt="">
+                <img src="../../../../assets/images/carousel/7.jpg" alt="">
+            </div>
         </div>
     </div>
 </section>
