--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -5,10 +5,10 @@
         </a>
         <ul class="navbar-nav ms-auto h-100">
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Nav1</a>
+                <a class="nav-link" aria-current="page" routerLink="/welcome">Welcome</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Nav2</a>
+                <a class="nav-link" aria-current="page" routerLink="/contact">Contact</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Nav3</a>
