--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
 <app-navbar></app-navbar>
-<app-welcome></app-welcome>
-<app-gallery></app-gallery>
-<app-story></app-story>
-<!--
-<app-services></app-services>
- -->
-<app-contact></app-contact>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
 
