--- a/src/app/core/pages/welcome/welcome.component.html
+++ b/src/app/core/pages/welcome/welcome.component.html
@@ -8,12 +8,11 @@
                     </div>
                     <div class="col-md-12 col-8">
                         <div class="col pb-3">
-                            <!--Add Translation-->
-                            <h1 class="title m-0">A UNIQUE<br>APPROACH<br>TO MICROBLADING</h1>
+                            <h1 class="title m-0">{{'WELCOME.WELCOME_PART_ONE' | translate}} <br>{{'WELCOME.APPROACH' |
+                                translate}}<br> {{'WELCOME.WELCOME_PART_TWO' | translate}}</h1>
                         </div>
                         <div class="col">
-                            <!--Add Translation-->
-                            <h3 class="text m-0">Amazing beauty experience that's tailored to you!</h3>
+                            <h3 class="text m-0">{{'WELCOME.SECOND_WELCOME' | translate}}</h3>
                         </div>
                     </div>
                 </div>
