Added services component

--- a/src/app/core/pages/contact/contact.component.scss
+++ b/src/app/core/pages/contact/contact.component.scss
@@ -14,7 +14,26 @@ $bg: $colourA;
         border-radius: 5%;
     }
 
+    .icon {
+        margin-left: .5rem;
+        margin-right: .5rem;
+    }
+
     .title {
-    text-align: right;
+        text-align: right;
+    }
+
+    a {
+        text-decoration: none;
+        color: $fontColor;
+    }
+
+    .hero {
+        background-image: url(../../../../assets/images/contact/monica.png);
+        height: 60vh;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
     }
 }
