--- a/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/core/pages/navbar/navbar-desktop/navbar-desktop.component.html
@@ -5,16 +5,24 @@
         </a>
         <ul class="navbar-nav ms-auto h-100">
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" routerLink="/welcome">Welcome</a>
+                <a class="nav-link" aria-current="page" routerLink="/welcome">
+                    {{"NAVIGATION.WELCOME" | translate}}
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" routerLink="/contact">Contact</a>
+                <a class="nav-link" aria-current="page" routerLink="/story">
+                    {{"NAVIGATION.MY_STORY" | translate}}
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Nav3</a>
+                <a class="nav-link" aria-current="page" routerLink="/contact">
+                    {{"NAVIGATION.CONTACT" | translate}}
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Nav4</a>
+                <a class="nav-link" aria-current="page" routerLink="/services">
+                    {{"NAVIGATION.SERVICES" | translate}}
+                </a>
             </li>
         </ul>
         <div class="dropdown">
