--- a/src/app/core/pages/story/story.component.html
+++ b/src/app/core/pages/story/story.component.html
@@ -1,7 +1,7 @@
 <section class="story">
     <div class="container">
-        <div class="row pb-3">
-            <div class="row h-100">
+        <div class="col-12">
+            <div class="row pb-3">
                 <div class="d-flex align-items-center">
                     <div>
                         <h1 class="title m-0">{{'STORY.HEADER' | translate}}</h1>
@@ -9,15 +9,46 @@
                 </div>
             </div>
         </div>
-        <div class="row pb-3">
-            <div class="row h-100">
-                <div class="d-flex align-items-center">
-                    <h5 class="text m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </h5>
+        <div class="col-12">
+            <div class="row h-100 pb-3">
+                <div class="col-lg-6 col-12 d-flex flex-column">
+                    <div class="row">
+                        <h4 class="text m-0 pb-4">
+                            Hey Beautiful,
+                        </h4>
+                        <h5 class="text m-0 pb-3">My name is Monika and I help people enhance their natural beauty and
+                            feel
+                            beautiful in their
+                            own skin every day.
+                        </h5>
+                        <h5 class="text m-0 pb-3"> For as long as I can remember I have been interested in makeup and
+                            have
+                            enjoyed
+                            taking care of my appearance. Creating the perfect eyeliner or the perfected shape
+                            of my eyebrows has always given me a lot of satisfaction. Applying make-up
+                            in the morning is still one of my favorite things to do every day. It's also a part of
+                            of me that I wanted to share with others.
+                        </h5>
+                        <h5 class="text m-0 pb-3">
+                            You know that feeling when you discover a really good piece of music and want to show
+                            everyone how great it is? I had that with Microblading and that's why I created
+                            Montana PhiBrows.
+                        </h5>
+                        <h5 class="text m-0 pb-3">
+                            Yes, I'm a small, growing, self-sufficient business with no secretary, manager or personal
+                            assistant. But I have been trusted by many clients and have managed to find the perfect
+                            eyebrow shape for each of them.
+                        </h5>
+                        <h5 class="text m-0 pb-3">
+                            Your visit to my website is the first step towards improving your self-confidence
+                            and I am glad that you want to do it together with me. A few hours in my office will allow
+                            you to save you time each day, but most importantly will give you
+                            an immediate, delightful result.
+                        </h5>
+                    </div>
+                </div>
+                <div class="hero col-lg-6 col-12 d-flex justify-content-end pb-3">
+                    <!-- <img class="photo" src="../../../../assets/images/story/monica.png" alt=""> -->
                 </div>
             </div>
         </div>
