--- a/src/app/core/pages/contact/contact.component.html
+++ b/src/app/core/pages/contact/contact.component.html
@@ -15,15 +15,36 @@
             </div>
             <div class="col-12">
                 <div class="row h-100 pt-3">
-                    <div class="col-md-6 col-12 d-flex align-items-center pb-3">
-                        <img class="photo" src="../../../../assets/images/creamingAsianWoman.PNG" alt="">
+                    <div class="hero col-md-6 col-12 d-flex align-items-center pb-3">
+                        <!-- <img class="photo" src="../../../../assets/images/contact/monica.png" alt=""> -->
                     </div>
-                    <div class="col-md-6 col-12 d-flex flex-column">
+                    <div class="col-md-6 col-12 d-flex flex-column pt-3">
                         <div class="col d-flex align-items-center pb-3">
-                            <h4 class="text m-0">Telephone: Telephone Placeholder</h4>
+                            <h4 class="text m-0">{{"CONTACT.TELEPHONE" | translate}}: </h4>
                         </div>
                         <div class="col d-flex align-items-center pb-3">
-                            <h4 class="text m-0">Email: Email Placeholder</h4>
+                            <h4 class="text m-0">{{"CONTACT.SOCIAL_MEDIA" | translate}}:</h4>
+                            <span class="icon">
+                                <a href="https://www.instagram.com/montanaphibrows/" target="_blank" title="Visit my Instagram profile!">
+                                    <fa-icon [icon]="['fab', 'instagram']" size="2x"></fa-icon>
+                                </a>
+                            </span>
+                            <span class="icon">
+                                <a href="https://maps.app.goo.gl/62QbbnRBgbya1AHb6" target="_blank" title="Visit my Google page!">
+                                    <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
+                                </a>
+                            </span>
+                            <span class="icon">
+                                <a href="https://www.facebook.com/montanaphibrows" target="_blank" title="Visit my Facebook page!">
+                                    <fa-icon [icon]="['fab', 'facebook']" size="2x"></fa-icon>
+                                </a>
+                            </span>
+                        </div>
+                        <div class="col d-flex align-items-center pb-3">
+
+                            <h4 class="text m-0">{{"CONTACT.EMAIL" | translate}}:
+                                <a href="mailto:someone@yoursite.com">monikakossek0@gmail.com</a>
+                            </h4>
                         </div>
                     </div>
                 </div>
