--- a/src/app/core/pages/services/services.component.html
+++ b/src/app/core/pages/services/services.component.html
@@ -1,1 +1,43 @@
-<p>Describe services and prices + photos</p>
+<section class="services">
+    <div class="container">
+        <div class="row pb-3">
+            <div class="d-flex align-items-center">
+                <div>
+                    <h1 class="title m-0">{{'SERVICES.HEADER' | translate}}</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row pb-3">
+            <div class="col-md-4 pb-3">
+                <ul class="treatment">
+                    <li class="header">Microblading</li>
+                    <li class="grey">CHF 450.00</li>
+                    <li class="service-photo">
+                        <img src="../../../../assets/images/services/Microblading.webp" alt="">
+                    </li>
+                    <li class="grey"><a href="#" class="button">Book a visit</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 pb-3">
+                <ul class="treatment">
+                    <li class="header">Microblading</li>
+                    <li class="grey">CHF 450.00</li>
+                    <li class="service-photo">
+                        <img src="../../../../assets/images/services/MicroNeedling.webp" alt="">
+                    </li>
+                    <li class="grey"><a href="#" class="button">Book a visit</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 pb-3">
+                <ul class="treatment">
+                    <li class="header">Microblading</li>
+                    <li class="grey">CHF 450.00</li>
+                    <li class="service-photo">
+                        <img src="../../../../assets/images/services/PlasmaPen2.webp" alt="">
+                    </li>
+                    <li class="grey"><a href="#" class="button">Book a visit</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
