--- a/src/app/core/pages/story/story.component.scss
+++ b/src/app/core/pages/story/story.component.scss
@@ -4,18 +4,32 @@ $bg: $colourA;
 
 .story {
     background-color: $bg;
-    padding: 2rem 0;
-    
-    .logo,
-    .photo {
-        width: 100%;
-    }
+    position: relative;
 
     .photo {
-        border-radius: 5%;
+        width: 90%;
+        height: 90%;
     }
 
-    .title {
-    text-align: right;
+    .hero {
+        background-image: url(../../../../assets/images/story/monica.png);
+        height: 70vh;
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        .photo {
+            width: 90%;
+            height:80%;
+        }
+    }
+
+    @media only screen and (max-width: 900px) {
+        .photo {
+            width: 80%;
+        }
     }
 }
