Added description in services component

--- a/src/app/core/pages/services/services.component.html
+++ b/src/app/core/pages/services/services.component.html
@@ -8,34 +8,41 @@
             </div>
         </div>
         <div class="row pb-3">
-            <div class="col-md-4 pb-3">
+            <div class="col-lg-4 pb-3">
                 <ul class="treatment">
                     <li class="header">Microblading</li>
-                    <li class="grey">CHF 450.00</li>
+                    <li class="price">CHF 450.00</li>
+                    <li class="description">PhiBrows Microblading is a cosmetic procedure that inserts pigment under
+                        your skin dedicated manual tool to give you well-defined, natural looking eyebrows. Generally,
+                        results can last from 18 to 30 months depending on your skin type, lifestyle, and how often you
+                        get touch-ups.</li>
                     <li class="service-photo">
                         <img src="../../../../assets/images/services/Microblading.webp" alt="">
                     </li>
-                    <li class="grey"><a href="#" class="button">Book a visit</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 pb-3">
+            <div class="col-lg-4 pb-3">
                 <ul class="treatment">
-                    <li class="header">Microblading</li>
-                    <li class="grey">CHF 450.00</li>
+                    <li class="header">Plasma Pen</li>
+                    <li class="price">CHF 450.00</li>
+                    <li class="description">The Plasma Pen is a groundbreaking non-surgical, non-invasive skin
+                        treatment. Plasma Pen sessions (also called “fibroblast” therapy) reduce the appearance of
+                        wrinkles and rejuvenate dull and sagging skin by stimulating collagen production</li>
                     <li class="service-photo">
                         <img src="../../../../assets/images/services/MicroNeedling.webp" alt="">
                     </li>
-                    <li class="grey"><a href="#" class="button">Book a visit</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 pb-3">
+            <div class="col-lg-4 pb-3">
                 <ul class="treatment">
-                    <li class="header">Microblading</li>
-                    <li class="grey">CHF 450.00</li>
+                    <li class="header">Microneedling</li>
+                    <li class="price">CHF 450.00</li>
+                    <li class="description">Microneedling is a cosmetic that uses tiny needles to puncture the skin. It
+                        is used to treat a variety of skin conditions that cause depressions in the skin such as acne
+                        scarring, surgical scars, other scars, burns, enlarged pores, wrinkles, and stretch marks.</li>
                     <li class="service-photo">
                         <img src="../../../../assets/images/services/PlasmaPen2.webp" alt="">
                     </li>
-                    <li class="grey"><a href="#" class="button">Book a visit</a></li>
                 </ul>
             </div>
         </div>
