First deployment version completed

--- a/src/app/core/pages/footer/footer.component.html
+++ b/src/app/core/pages/footer/footer.component.html
@@ -20,7 +20,7 @@
             </li>
             <li>
                 <span>
-                    <a href="https://maps.app.goo.gl/62QbbnRBgbya1AHb6" target="_blank" title="Visit my Google page!">
+                    <a href="https://maps.app.goo.gl/dPqVRn1BqZ6jusY66" target="_blank" title="Visit my Google page!">
                         <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
                     </a>
                 </span>
