--- a/src/app/core/pages/contact/contact.component.html
+++ b/src/app/core/pages/contact/contact.component.html
@@ -17,7 +17,7 @@
                 <div class="row h-100 pt-3">
                     <div class="col-md-6 col-12 d-flex flex-column pt-3">
                         <div class="col d-flex align-items-center pb-3">
-                            <h4 class="text m-0">{{"CONTACT.TELEPHONE" | translate}}: </h4>
+                            <h4 class="text m-0">{{"CONTACT.TELEPHONE" | translate}}: +41 76 509 15 13</h4>
                         </div>
                         <div class="col d-flex align-items-center pb-3">
                             <h4 class="text m-0">{{"CONTACT.SOCIAL_MEDIA" | translate}}:</h4>
@@ -40,7 +40,7 @@
                         <div class="col d-flex align-items-center pb-3">
 
                             <h4 class="text m-0">{{"CONTACT.EMAIL" | translate}}:
-                                <a href="mailto:someone@yoursite.com">monikakossek0@gmail.com</a>
+                                <a href="mailto:monikakossek0@gmail.com" title="Mail me!">monikakossek0@gmail.com</a>
                             </h4>
                         </div>
                     </div>
