--- a/src/app/core/pages/welcome/welcome.component.scss
+++ b/src/app/core/pages/welcome/welcome.component.scss
@@ -8,6 +8,10 @@
         width: 100%;
     }
 
+    .text {
+        font-size: 1.35rem;
+    }
+
     .photo {
         border-bottom-left-radius: 50%;
         border-bottom-right-radius: 50%;
